[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bettertrack"
version = "0.0.1"
description = "Network tracker in terminal"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "typer>=0.19.2",
]

[project.scripts]
bettertrack = "bettertrack.cli:main"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.4",
]
